# project_ai_ftsy_football_sum

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml
deployment/: namespace.yaml  webapp-deployment.yaml  webapp-service.yaml
notebooks/: nfl_extract.ipynb
project_ai_ftsy_football_sum/: main.py
project_ai_ftsy_football_sum/functions/: pg_functions.py
