[project]
name = "project-ai-ftsy-football-sum"
version = "0.1.0"
description = ""
authors = [
    {name = "trighele",email = "trighele@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "yt-dlp (>=2025.8.11,<2026.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "huggingface-hub (>=0.34.4,<0.35.0)",
    "torch (>=2.8.0,<3.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "certifi (>=2025.8.3,<2026.0.0)",
    "anthropic (>=0.64.0,<0.65.0)",
    "gradio (>=5.44.0,<6.0.0)",
    "openai (>=1.102.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.5"

